<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    android:orientation="vertical"
    tools:context=".ShowDetails">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/country_name"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/showCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_world_stat_others"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_height"
        android:background="@color/case_color"
        android:layout_marginStart="@dimen/world_margleeft"
        android:layout_marginEnd="@dimen/world_margrit"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cases"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/showCases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringtest"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_world_stat_others"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_height"
        android:background="@color/case_color"
        android:layout_marginStart="@dimen/world_margleeft"
        android:layout_marginEnd="@dimen/world_margrit"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/recovered"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/showRecovered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringtest"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_world_stat_others"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_height"
        android:background="@color/case_color"
        android:layout_marginStart="@dimen/world_margleeft"
        android:layout_marginEnd="@dimen/world_margrit"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/critical"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/showCritical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringtest"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_world_stat_others"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_height"
        android:background="@color/case_color"
        android:layout_marginStart="@dimen/world_margleeft"
        android:layout_marginEnd="@dimen/world_margrit"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/active"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/showActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringtest"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_world_stat_others"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_height"
        android:background="@color/case_color"
        android:layout_marginStart="@dimen/world_margleeft"
        android:layout_marginEnd="@dimen/world_margrit"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/new_cases"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/showNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringtest"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_world_stat_others"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_height"
        android:background="@color/case_color"
        android:layout_marginStart="@dimen/world_margleeft"
        android:layout_marginEnd="@dimen/world_margrit"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/total_deaths"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/showDeath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringtest"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_world_stat_others"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_height"
        android:background="@color/case_color"
        android:layout_marginStart="@dimen/world_margleeft"
        android:layout_marginEnd="@dimen/world_margrit"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/deaths_today"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/showNewDeaths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringtest"
            android:textAlignment="textEnd"
            android:textSize="@dimen/text_size_world_stat_others"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_height"
        android:background="@color/case_color"
        android:layout_marginStart="@dimen/world_margleeft"
        android:layout_marginEnd="@dimen/world_margrit"
        />





</LinearLayout>